--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,11 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "matplotlib>=3.10.8",
+    "matplotlib-fontja>=1.1.0",
+    "polars>=1.37.1",
+]
 
 [dependency-groups]
 dev = [
